# tomos

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  tomos.gemspec
ext/tomos/: Cargo.toml  extconf.rb
ext/tomos/src/: lib.rs
lib/: tomos.rb
lib/tomos/: version.rb
spec/: markdown_splitter_spec.rb  spec_helper.rb  text_splitter_spec.rb
