[package]
name = "tomos"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "tomos"
crate-type = ["cdylib"]

[dependencies]
text-splitter = { version = "0.29", features = ["tiktoken-rs", "markdown"] }
tiktoken-rs = "0.9"
magnus = "0.8"
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
